--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.5.13",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -31,6 +31,6 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
     "nodemon": "^1.19.1",
-    "prettier": "^1.17.1"
+    "prettier": "^1.18.0"
   }
 }
